fixed flip disc back not showing in safari

--- a/dev/scss/includes/_flip-discs.scss
+++ b/dev/scss/includes/_flip-discs.scss
@@ -19,6 +19,7 @@
     border-radius: 50%;
     transition: transform .8s ease;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
   }
 
   &:hover{
